# frozenchess

./: README.rst  pyproject.toml
docs/: CNAME
src/frozenchess/: __init__.py
src/frozenchess/_utils/: __init__.py
src/frozenchess/abc/: ABCEnum.py  ABCEnumMeta.py  FENStylable.py  Flag.py  FlagMeta.py  Mirrorable.py  Starting.py  UCIStylable.py  __init__.py
src/frozenchess/abc/enums/: Flag.py  Meta.py  Mod.py  Token.py  __init__.py
src/frozenchess/abc/normal/: FENStylable.py  HasNative.py  Mirrorable.py  Starting.py  UCIStylable.py  __init__.py
src/frozenchess/bases/: AbstractionError.py  FENMod.py  FENStylable.py  Flag.py  FlagFENMod.py  FlagMeta.py  IntFENMod.py  IntMod.py  Mirrorable.py  ModMeta.py  Starting.py  UCIStylable.py  __init__.py
src/frozenchess/bases/ables/: FENStylable.py  HasNative.py  Mirrorable.py  Starting.py  SubInt.py  UCIStylable.py  __init__.py
src/frozenchess/bases/ables.py/: FENStylable.py  Mirrorable.py  Starting.py  UCIStylable.py
src/frozenchess/bases/abstraction/: __init__.py
src/frozenchess/bases/enums/: FENEnum.py  Flag.py  Int.py  IntMod.py  Mod.py  ModMeta.py  __init__.py
src/frozenchess/bases/uints.py/: UInt1.py  UInt6.py  UInt64.py  UIntBase.py  (+1 more)
src/frozenchess/core/: BitBoard.py  Castle.py  CastlingAvailability.py  FEN.py  File.py  Flag.py  Piece.py  Placement.py  Ply.py  Square.py  __init__.py
src/frozenchess/tests/: test_1.py  test_bitboard.py  test_bitboard_a.py  test_bitboard_b.py  test_file.py  test_piece.py  test_placement_1.py  test_placement_2.py  test_square.py
src/frozenchess/utils/: __init__.py
(+1 files in other folders)
