[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "setuptools>=61.0",
]

[project]
authors = [
    { email = "johannes-programming@mailfence.com", name = "Johannes" },
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Typing :: Typed",
]
dependencies = [
    "chess>=1.11.2",
    "keyalias>=1.0.3",
    "normedtuple>=1.0",
    "numpy>=2.0.2",
]
description = "frozenchess"
keywords = []
name = "frozenchess"
readme = "README.rst"
requires-python = ">=3.11"
version = "0.0.0+bitboard.2"

[project.license]
file = "LICENSE.txt"

[project.urls]
Download = "https://pypi.org/project/frozenchess/#files"
Index = "https://pypi.org/project/frozenchess/"
Source = "https://github.com/johannes-programming/frozenchess/"
